Final, ready for test

--- a/ama_content/style.css
+++ b/ama_content/style.css
@@ -212,6 +212,8 @@ table td:first-child {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+/* End of Loading section */
+
 .ama_form {
   background-color: #fff;
   padding: 20px;
